--- a/EasyStart/Views/Home/KnockOutGridPage.cshtml
+++ b/EasyStart/Views/Home/KnockOutGridPage.cshtml
@@ -1,7 +1,7 @@
 ﻿
 <div id="divBoxed" class="container">
-
     <div class="transparent-bg" style="position: absolute;top: 0;left: 0;width: 100%;height: 100%;z-index: -1;zoom: 1;"></div>
+<script src="@Url.Content("~/ViewModels/HomeViewModel.js")" type="text/javascript"></script>
 
     <div class="divPanel notop nobottom">
         <div class="row-fluid">
@@ -26,7 +26,7 @@
 
                         <div class="nav-collapse collapse">
                             <ul class="nav nav-pills ddmenu">
-                                <li class="dropdown active"><a href="">Home</a></li>
+                                <li class="dropdown"><a href="@Url.Action("EasyStart")">Home</a></li>
 			                    <li class="dropdown">
 				                    <a href="#" class="dropdown-toggle">Page <b class="caret"></b></a>
 				                    <ul class="dropdown-menu">
@@ -37,7 +37,7 @@
 			                    </li>
 			                    <li class="dropdown"><a href="@Url.Action("GridPage")">Grid</a></li>
 			                    <li class="dropdown"><a href="@Url.Action("SimplePage")">Simple</a></li>
-                                <li class="dropdown"><a href="@Url.Action("KnockOutGridPage")">Knock Out Grid</a></li>
+                                <li class="dropdown active"><a href="@Url.Action("KnockOutGridPage")">Knock Out Grid</a></li>
                             </ul>
                         </div> <!-- nav-collapse -->
 
@@ -48,127 +48,48 @@
 
         <div class="row-fluid">
             <div class="span12">
-                
-                <div id="headerSeparator"></div>   
-                
-                <div class="row-fluid">
-                    <div class="span6">
-                        <div id="divHeaderText" class="page-content">
-                            <div id="divHeaderLine1">Header Text Here!</div>
-                            <div id="divHeaderLine2">2nd Line Header Text for calling extra attention to featured content or information.</div>
-                            <div id="divHeaderLine3">
-                                <a class="btn btn-large btn-secondary" href="#">Secondary Button</a>    
-                                <a class="btn btn-large btn-primary" href="#">Primary Button</a>
-                            </div>
-                        </div> <!--divHeaderText-->
-                    </div> <!-- span6 -->
+                <div id="contentInnerSeparator"></div>
+            </div>
+        </div> <!-- row-fluid-->
 
-                    <div class="span6">
-                        <div id="camera_wrap">                            
-                            <div data-src="~/Img/working-on-keyboard.JPG" >
-                                <div style="position:absolute;bottom:10%;left:3%;padding:10px;width:50%;" 
-                                    class="fadeIn camera_effected camera_caption cap1">
-                                        Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                                </div>
-                            </div>
-                            <div data-src="~/Img/two-businessmen.jpg" >
-                                <div class="camera_caption fadeFromBottom cap2">
-                                    Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                                </div>
-                            </div>
-                            <div data-src="~/Img/NY.jpg" >
-                                <div class="camera_caption fadeFromTop cap1">
-                                    Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                                </div>
-                            </div>
-                            <div data-src="~/Img/Lanterns.jpg" >
-                                <div class="camera_caption fadeFromRight cap2">
-                                    Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                                </div>
-                            </div>
-                        </div><!-- camera_wrap -->
-                    </div> <!-- span6 -->
-
-                </div> <!-- row-fluid -->
-
-                <div id="headerSeparator2"></div>
-
-            </div> <!-- span12 -->
-        </div> <!-- row-fluid -->
     </div> <!-- divPanel notop nobottom -->
 
     <div class="contentArea">
         <div class="divPanel notop page-content">
             <div class="row-fluid">
-                
-                <div class="span12" id="divMain">
-                    <h1>Full Width</h1>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
-                        Lorem Ipsum has been the industry’s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus leo ante, consectetur sit amet vulputate vel, dapibus sit amet lectus. 
-                    </p>
 
-                    <div class="row-fluid">
-                        <div class="span4">
-                            <h2>1/3 Column</h2>
-                            <p>Lorem Ipsum has been the industry’s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
-                                <a href="#">Read More &raquo;</a>
-                            </p>
-                        </div>
-                        <div class="span4">
-                            <h2>1/3 Column</h2>
-                            <p>Lorem Ipsum has been the industry’s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
-                                <a href="#">Read More &raquo;</a>
-                            </p>
-                        </div>
-                        <div class="span4">
-                            <h2>1/3 Column</h2>
-                            <p>Lorem Ipsum has been the industry’s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
-                                <a href="#">Read More &raquo;</a>
-                            </p>
-                        </div>
-                    </div> <!-- row-fluid -->
+                <div class="span12">
 
-                    <div class="row-fluid">
-                        <div class="span8">
-                            <h2>2/3 Column</h2>
-                            <p>
-                                <img src="http://farm4.static.flickr.com/3216/5712560271_abf0043fb1_t.jpg" 
-                                    alt="" style="border: 7px solid rgb(255, 255, 255); 
-                                                    box-shadow: 0pt 1px 4px rgba(0, 0, 0, 0.3); float: left; margin: 5px 15px 5px 0px;" />
-                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
-                                Lorem Ipsum has been the industry’s standard dummy text ever since the 1500s, 
-                                when an unknown printer took a galley of type and scrambled it to make a type specimen book. Duis mollis, 
-                                est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. 
-                                Maecenas sed diam eget risus varius blandit sit amet non magna. 
-                                Integer posuere erat a ante venenatis dapibus posuere velit aliquet.
-                                <a href="#">Read More &raquo;</a>
-                            </p>
-                        </div> <!-- span8 -->
+                    <div class="breadcrumbs">
+                        <a href="@Url.Action("EasyStart")">Home</a> &nbsp;/&nbsp; <span>Blog</span>
+                    </div><!-- breadcrumbs -->
 
-                        <div class="span4">
-                            <div class="sidebox">
-                                <h3 class="sidebox-title">Sample Sidebar Content</h3>
-                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
-                                    <a href="#">Lorem Ipsum</a> has been the industry’s standard dummy text ever since the 1500s.
-                                </p>
-                            </div>
-                        </div> <!-- span4 -->
+                    <h1>Grid</h1>
 
-                    </div> <!-- row-fluid -->
+                    <div id="gridArea" data-bind="foreach: news">
+                        <ul id="tiles">
+                            <li class="itemz">                 
+                                <img data-bind="attr:{src: img}"></img>             
+                                <h4 data-bind="text: head"></h4>                                
+                                <p data-bind="text: detail">                                      
+                                </p>                        
+                                <a href="#" class="more_link">Read More</a>
+                            </li>
+                        </ul>
+                    </div> <!-- gridArea -->
 
-                </div> <!-- divMain -->
+                </div> <!--span12--> 
 
-            </div> <!-- row-fluid -->
+            </div>  <!--row-fluid-->
 
             <div id="footerInnerSeparator"></div>
 
-        </div> <!-- divPanel -->
-    </div> <!--contentArea -->
+        </div> <!--divPanel notop page-content-->
+    </div> <!--contentArea-->
 
     <div id="footerOuterSeparator"></div>
-    
-    <div id="divFooter" class="footerArea">
+
+   <div id="divFooter" class="footerArea">
         <div class="divPanel">
             <div class="row-fluid">
                 <div class="span3" id="footerArea1">
@@ -248,7 +169,7 @@
         </div> <!-- divPanel -->
     </div>
 
-</div> <!-- container -->
+</div><!-- container -->
 
 <br /><br /><br />
 
@@ -273,13 +194,35 @@
             });
         });
 
-        //camera_wrap
-        function startCamera() {
-            $('#camera_wrap').camera({
-                fx: 'scrollLeft', time: 2000, loader: 'none', playPause: false, height: '65%', pagination: true
-            });
-        }
-        $(function () { startCamera() });
+        $(window).load(
+            function () {
+                var options = { autoResize: true, container: $('#gridArea'), offset: 10 };
+                var handler = $('#tiles li'); handler.wookmark(options);
 
+                $('#tiles li img').each(function () {
+                    var newHeight = $(this).height() + $(this).parent().find('h4').height()
+                                    + $(this).parent().find('p').height() + 25; 
+                    $(this).parent().css('height', newHeight + 'px');
+                });
+
+                handler.wookmark(options); handler.wookmark(options); 
+            });
+            
+
+        $(function () {
+            var $container = $('#gridArea');            
+            
+        });
+
+
+        $(function () {
+            $("img").lazyload({ placeholder: "Img/grey.gif", effect: "fadeIn" });
+        });
+                
+    </script>
+    <script type="text/javascript">
+        // Activates knockout.js
+        ko.applyBindings(new viewModelContainer());
+        
     </script>
 }
