--- a/EasyStart/Views/Home/SimplePage.cshtml
+++ b/EasyStart/Views/Home/SimplePage.cshtml
@@ -35,6 +35,7 @@
                                 </li>
                                 <li class="dropdown"><a href="@Url.Action("GridPage")">Grid</a></li>
                                 <li class="dropdown active"><a href="">Simple</a></li>
+                                <li class="dropdown"><a href="@Url.Action("KnockOutGridPage")">Knock Out Grid</a></li>
                             </ul>
                         </div> <!-- nav-collapse -->
                     </div> <!-- navbar-->
