--- a/EasyStart/Views/Shared/_Layout.cshtml
+++ b/EasyStart/Views/Shared/_Layout.cshtml
@@ -26,6 +26,9 @@
     @RenderSection("head", false)
 
     <script src="@Url.Content("~/Scripts/jquery-1.8.3.min.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/Scripts/jquery.lazyload.min.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/Scripts/jquery.scrollstop.min.js")" type="text/javascript"></script>
+
     <script src="@Url.Content("~/Scripts/knockout-2.2.0.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/bootstrap/js/bootstrap.min.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/wookmark/js/jquery.wookmark.js")" type="text/javascript"></script>
