--- a/EasyStart/Views/Home/EasyStart.cshtml
+++ b/EasyStart/Views/Home/EasyStart.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿<script src="@Url.Content("~/ViewModels/HomePageViewModel.js")" type="text/javascript"></script>
+
 <div id="divBoxed" class="container">
 
     <div class="transparent-bg" style="position: absolute;top: 0;left: 0;width: 100%;height: 100%;z-index: -1;zoom: 1;"></div>
@@ -102,54 +103,46 @@
             <div class="row-fluid">
                 
                 <div class="span12" id="divMain">
-                    <h1>Full Width</h1>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
-                        Lorem Ipsum has been the industry’s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus leo ante, consectetur sit amet vulputate vel, dapibus sit amet lectus. 
-                    </p>
+                    <div class="row-fluid" data-bind="with: fullCol">
+                        <h1 data-bind="text: head"></h1>
+                        <p data-bind="text: detail">Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+                            Lorem Ipsum has been the industry’s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus leo ante, consectetur sit amet vulputate vel, dapibus sit amet lectus. 
+                        </p>
+                        <input type="button" value="Check" data-bind="click: $parent.printCheck"/>
+                        
+                    </div> <!-- row-fluid -->
 
-                    <div class="row-fluid">
+                    <div class="row-fluid" data-bind="foreach: thirdCols">
                         <div class="span4">
-                            <h2>1/3 Column</h2>
-                            <p>Lorem Ipsum has been the industry’s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
-                                <a href="#">Read More &raquo;</a>
-                            </p>
-                        </div>
-                        <div class="span4">
-                            <h2>1/3 Column</h2>
-                            <p>Lorem Ipsum has been the industry’s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
-                                <a href="#">Read More &raquo;</a>
-                            </p>
-                        </div>
-                        <div class="span4">
-                            <h2>1/3 Column</h2>
-                            <p>Lorem Ipsum has been the industry’s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
-                                <a href="#">Read More &raquo;</a>
-                            </p>
+                            <h2 data-bind="text: head"></h2>
+                            <p data-bind="text: detail">
+                            </p> 
+                            <a data-bind="attr: { href: href}">Read More &raquo;</a>                           
                         </div>
                     </div> <!-- row-fluid -->
 
-                    <div class="row-fluid">
-                        <div class="span8">
-                            <h2>2/3 Column</h2>
+                    <div class="row-fluid" >
+                        <div class="span8" data-bind="with: twoInThirdCols">
+                            <h2 data-bind="text: head">2/3 Column</h2>
                             <p>
-                                <img src="http://farm4.static.flickr.com/3216/5712560271_abf0043fb1_t.jpg" 
+                                <img data-bind="attr:{src: img}"
                                     alt="" style="border: 7px solid rgb(255, 255, 255); 
-                                                    box-shadow: 0pt 1px 4px rgba(0, 0, 0, 0.3); float: left; margin: 5px 15px 5px 0px;" />
-                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
-                                Lorem Ipsum has been the industry’s standard dummy text ever since the 1500s, 
-                                when an unknown printer took a galley of type and scrambled it to make a type specimen book. Duis mollis, 
-                                est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. 
-                                Maecenas sed diam eget risus varius blandit sit amet non magna. 
-                                Integer posuere erat a ante venenatis dapibus posuere velit aliquet.
+                                    box-shadow: 0pt 1px 4px rgba(0, 0, 0, 0.3); 
+                                    float: left; 
+                                    margin: 5px 15px 5px 0px;"></img>
+                                @*<img src="http://farm4.static.flickr.com/3216/5712560271_abf0043fb1_t.jpg" 
+                                    alt="" style="border: 7px solid rgb(255, 255, 255); 
+                                                    box-shadow: 0pt 1px 4px rgba(0, 0, 0, 0.3); float: left; margin: 5px 15px 5px 0px;" />*@
+                                <p data-bind="text: detail"></p>
                                 <a href="#">Read More &raquo;</a>
                             </p>
                         </div> <!-- span8 -->
 
-                        <div class="span4">
+                        <div class="span4" data-bind="with: sideBox">
                             <div class="sidebox">
-                                <h3 class="sidebox-title">Sample Sidebar Content</h3>
-                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+                                <h3 class="sidebox-title" data-bind="text: head">Sample Sidebar Content</h3>
+                                <p data-bind="text: detail">Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
                                     <a href="#">Lorem Ipsum</a> has been the industry’s standard dummy text ever since the 1500s.
                                 </p>
                             </div>
@@ -281,5 +274,8 @@
         }
         $(function () { startCamera() });
 
+        // Activates knockout.js
+        ko.applyBindings(new mainModelContainer());
     </script>
+
 }
