--- a/EasyStart/Views/Home/KnockOutGridPage.cshtml
+++ b/EasyStart/Views/Home/KnockOutGridPage.cshtml
@@ -1,7 +1,7 @@
 ﻿
 <div id="divBoxed" class="container">
     <div class="transparent-bg" style="position: absolute;top: 0;left: 0;width: 100%;height: 100%;z-index: -1;zoom: 1;"></div>
-<script src="@Url.Content("~/ViewModels/HomeViewModel.js")" type="text/javascript"></script>
+<script src="@Url.Content("~/ViewModels/GridPageViewModel.js")" type="text/javascript"></script>
 
     <div class="divPanel notop nobottom">
         <div class="row-fluid">
@@ -73,7 +73,7 @@
                                 <h4 data-bind="text: head"></h4>                                
                                 <p data-bind="text: detail">                                      
                                 </p>                        
-                                <a href="#" class="more_link">Read More</a>
+                                <a data-bind="attr: { href: href}" class="more_link">Read More</a>
                             </li>
                         </ul>
                     </div> <!-- gridArea -->
